2006-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/check/Makefile.am:
	GST_DEBUG=*:4

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/check/Makefile.am:
	Higher debug level :(

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_ghost_pad_set_target):
	If new target and previous target are the same, don't retarget.

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/check/Makefile.am:
	Forcing GST_DEBUG to figure out what's going wrong with the buildbots.

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_media_to_object_time):
	Bug in converting media time over media_stop
	

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/check/simple.c: (GST_START_TEST), (gnonlin_suite):
	Added new test to check start/duration/stop correctness for
	sources and compositions.

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_remove_ghost_pad):
	Free the GnlPadPrivate once we have removed the pad.

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (update_pipeline):
	update_pipeline was returning the wrong information.
	It now returns FALSE only if there was an error updating the pipeline.
	* tests/check/simple.c: (GST_START_TEST):
	The test fails if the state_change() DOES return FAILURE.

2006-04-03  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	New pre-release (0.10.0.10).
	Required version of gstreamer core/-base is 0.10.4.
	* tests/check/simple.c: (gnonlin_suite):
	Only run the tests with core > 0.10.4.0

2006-04-03  Edward Hervey  <edward@fluendo.com>

	* tests/check/simple.c: (GST_START_TEST):
	When the pipeline is set to NULL, on slow/loaded systems the pipeline
	might not have reached that state yet when checking for the refcount
	of the pipeline/bus. We now check that refcount is between 1 and 2 now.

2006-04-03  Edward Hervey  <edward@fluendo.com>

	* gnl/gnl.c: (plugin_init):